fix social profiles on mobile

--- a/project/src/Components/SocialProfiles.css
+++ b/project/src/Components/SocialProfiles.css
@@ -97,5 +97,6 @@
     .profile-card {
         width: 80%;
         max-width: 300px;
+        flex: none;
     }
 }
